# pytest-artifact

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
docs/: conf.py  index.md
src/pytest_artifact/: __init__.py  _version.py  plugin.py
tests/: test_deprecated_package_name.py  test_fixtures.py
